--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"displayName": "Ronald File Viewer",
 	"description": "VisualStudio Code table view for ronald files",
 	"icon": "media/icon.jpg",
-	"version": "0.1.0",
-	"publisher": "AnTu2702",
+	"version": "0.1.3",
+	"publisher": "andreastully",
 	"private": false,
 	"license": "MIT",
 	"repository": {
@@ -29,6 +29,9 @@
 				"selector": [
 					{
 						"filenamePattern": "*.ronald"
+					},
+					{
+						"filenamePattern": "*.ronald.patch"
 					}
 				]
 			}
